# hyprwhispr-rs

./: .gitignore  .release.toml  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  RELEASING.md  git-cliff.toml  release-plz.toml  release.toml
.github/workflows/: release-plz.yml  release.yml
benches/: fast_vad.rs
config/hyprland/: hyprwhspr-rs-tray.sh
config/systemd/: hyprwhspr-rs.service
config/waybar/: hyprwhspr-module.jsonc
src/: app.rs  app_test.rs  benchmark.rs  config.rs  lib.rs  logging.rs  main.rs  status.rs
src/audio/: capture.rs  feedback.rs  mod.rs  vad.rs
src/input/: injector.rs  mod.rs  shortcuts.rs
src/speech/: mod.rs
src/speech/remote/: encoder.rs  error.rs  gemini.rs  groq.rs  mod.rs  selection.rs
src/stt/: audio.rs  gemini.rs  groq.rs  manager.rs  mod.rs
src/transcription/: audio.rs  gemini.rs  groq.rs  mod.rs  postprocess.rs  prompt.rs
src/whisper/: groq.rs  local.rs  manager.rs  mod.rs  transcriber.rs  wav.rs
src/whisper/providers/: gemini.rs  groq.rs  mod.rs
tests/: fast_vad.rs  fast_vad_segments.rs
