[package]
name = "hyprwhspr-rs"
version = "0.1.0"
edition = "2021"
authors = ["hyprwhspr-rs contributors"]
description = "Native speech-to-text voice dictation for Hyprland (Rust implementation)"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Config & serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "1"

# Audio
cpal = "0.15"
rodio = "0.17"

# Input
evdev = "0.12"
arboard = "3"

# Whisper (we'll try whisper-rs, but have subprocess fallback)
whisper-rs = { version = "0.12", optional = true }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Paths & filesystem
directories = "5"

# Text processing
regex = "1"

[features]
default = ["whisper-native"]
whisper-native = ["whisper-rs"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
