[package]
name = "hyprwhspr-rs"
version = "0.1.0"
edition = "2021"
authors = ["hyprwhspr-rs contributors"]
description = "Native speech-to-text voice dictation for Hyprland (Rust implementation)"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Config & serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonc-parser = { version = "0.26.3", features = ["serde"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Audio
cpal = "0.15"
rodio = "0.17"

# Input
evdev = "0.12"
arboard = { version = "3", features = ["wayland-data-control"] }
enigo = "0.2"

# Whisper (we'll try whisper-rs, but have subprocess fallback)
whisper-rs = { version = "0.12", optional = true }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Paths & filesystem
directories = "5"

# Text processing
regex = "1"
similar = "2"
owo-colors = { version = "4", features = ["supports-colors"] }
time = { version = "0.3", features = ["formatting", "local-offset", "macros"] }

[features]
default = []
whisper-native = ["whisper-rs"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
